--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 $crossword-item-size: 50px;
-$crossword-column-count: 13;
-$crossword-row-count: 13;
+$crossword-column-count: 18;
+$crossword-row-count: 18;
 
 $color-valid-item: #9AFF67;
 $color-focus-item: #FFFF74;
@@ -61,130 +61,59 @@ $color-focus-item: #FFFF74;
 	line-height: 1;
 }
 .crossword-board__item-label--1 {
-	grid-column: 1/1;
+	grid-column: 9/9;
 }
 .crossword-board__item-label--2 {
 	grid-column: 4/4;
+	grid-row: 2/2
 }
 .crossword-board__item-label--3 {
-	grid-column: 6/6;
+	grid-column: 1/1;
+	grid-row: 3/3;
 }
 .crossword-board__item-label--4 {
-	grid-column: 9/9;
+	grid-column: 7/7;
+	grid-row: 4/4;
 }
 .crossword-board__item-label--5 {
-	grid-column: 11/11;
+	grid-column: 3/3;
+	grid-row: 5/5
 }
 .crossword-board__item-label--6 {
-	grid-column: 13/13;
+	grid-column: 1/1;
+	grid-row: 6/6
 }
 .crossword-board__item-label--7 {
-	grid-column: 6/6;
-	grid-row: 2/2;
+	grid-column: 18/18;
+	grid-row: 6/6;
 }
 .crossword-board__item-label--8 {
-	grid-column: 3/3;
-	grid-row: 3/3;
+	grid-column: 10/10;
+	grid-row: 8/8;
 }
 .crossword-board__item-label--9 {
 	grid-column: 5/5;
-	grid-row: 3/3;
+	grid-row: 10/10;
 }
 .crossword-board__item-label--10 {
-	grid-column: 1/1;
-	grid-row: 4/4;
+	grid-column: 10/10;
+	grid-row: 13/13;
 }
 .crossword-board__item-label--11 {
-	grid-column: 8/8;
-	grid-row: 4/4;
+	grid-column: 2/2;
+	grid-row: 14/14;
 }
 .crossword-board__item-label--12 {
 	grid-column: 10/10;
-	grid-row: 4/4;
+	grid-row: 16/16;
 }
 .crossword-board__item-label--13 {
-	grid-column: 12/12;
-	grid-row: 4/4;
+	grid-column: 1/1;
+	grid-row: 17/17;
 }
 .crossword-board__item-label--14 {
-	grid-column: 3/3;
-	grid-row: 5/5;
-}
-.crossword-board__item-label--15 {
-	grid-column: 7/7;
-	grid-row: 5/5;
-}
-.crossword-board__item-label--16 {
-	grid-column: 9/9;
-	grid-row: 5/5;
-}
-.crossword-board__item-label--17 {
-	grid-column: 1/1;
-	grid-row: 6/6;
-}
-.crossword-board__item-label--18 {
-	grid-column: 2/2;
-	grid-row: 6/6;
-}
-.crossword-board__item-label--19 {
 	grid-column: 6/6;
-	grid-row: 6/6;
-}
-.crossword-board__item-label--20 {
-	grid-column: 8/8;
-	grid-row: 6/6;
-}
-.crossword-board__item-label--21 {
-	grid-column: 5/5;
-	grid-row: 7/7;
-}
-.crossword-board__item-label--22 {
-	grid-column: 4/4;
-	grid-row: 8/8;
-}
-.crossword-board__item-label--23 {
-	grid-column: 10/10;
-	grid-row: 8/8;
-}
-.crossword-board__item-label--24 {
-	grid-column: 11/11;
-	grid-row: 8/8;
-}
-.crossword-board__item-label--25 {
-	grid-column: 13/13;
-	grid-row: 8/8;
-}
-.crossword-board__item-label--26 {
-	grid-column: 1/1;
-	grid-row: 9/9;
-}
-.crossword-board__item-label--27 {
-	grid-column: 3/3;
-	grid-row: 9/9;
-}
-.crossword-board__item-label--28 {
-	grid-column: 9/9;
-	grid-row: 9/9;
-}
-.crossword-board__item-label--29 {
-	grid-column: 1/1;
-	grid-row: 10/10;
-}
-.crossword-board__item-label--30 {
-	grid-column: 8/8;
-	grid-row: 10/10;
-}
-.crossword-board__item-label--31 {
-	grid-column: 8/8;
-	grid-row: 11/11;
-}
-.crossword-board__item-label--32 {
-	grid-column: 1/1;
-	grid-row: 12/12;
-}
-.crossword-board__item-label--33 {
-	grid-column: 8/8;
-	grid-row: 13/13;
+	grid-row: 17/17;
 }
 .crossword-board--highlight {
 	position: absolute;
@@ -201,119 +130,68 @@ $color-focus-item: #FFFF74;
 /** ACROSS ANSWERS HIGHLIGHTING START                      */
 /***********************************************************/
 
-.crossword-board__item-highlight--across-1 {
-	grid-column: 1/7;
+.crossword-board__item-highlight--across-2 {
+	grid-column: 4/10;
+	grid-row: 2
 }
-.crossword-board__item-highlight--across-7 {
-	grid-column: 6/14;
-	grid-row: 2;
+.crossword-board__item-highlight--across-4 {
+	grid-column: 7/15;
+	grid-row: 4;
 }
-.crossword-board__item-highlight--across-8 {
-	grid-column: 3/7;
-	grid-row: 3;
+.crossword-board__item-highlight--across-6 {
+	grid-column: 1/10;
+	grid-row: 6;
+}
+.crossword-board__item-highlight--across-9 {
+	grid-column: 5/16;
+	grid-row: 10;
 }
 .crossword-board__item-highlight--across-10 {
-	grid-column: 1/7;
-	grid-row: 4;
-}
-.crossword-board__item-highlight--across-11 {
-	grid-column: 8/14;
-	grid-row: 4;
-}
-.crossword-board__item-highlight--across-14 {
-	grid-column: 3/6;
-	grid-row: 5;
-}
-.crossword-board__item-highlight--across-16 {
-	grid-column: 9/14;
-	grid-row: 5;
-}
-.crossword-board__item-highlight--across-17 {
-	grid-column: 1/5;
-	grid-row: 6;
-}
-.crossword-board__item-highlight--across-19 {
-	grid-column: 6/11;
-	grid-row: 6;
-}
-.crossword-board__item-highlight--across-21 {
-	grid-column: 5/10;
-	grid-row: 7;
-}
-.crossword-board__item-highlight--across-22 {
-	grid-column: 4/9;
-	grid-row: 8;
-}
-.crossword-board__item-highlight--across-23 {
-	grid-column: 10/14;
-	grid-row: 8;
-}
-.crossword-board__item-highlight--across-26 {
-	grid-column: 1/6;
-	grid-row: 9;
-}
-.crossword-board__item-highlight--across-28 {
-	grid-column: 9/12;
-	grid-row: 9;
-}
-.crossword-board__item-highlight--across-29 {
-	grid-column: 1/7;
-	grid-row: 10;
-}
-.crossword-board__item-highlight--across-30 {
-	grid-column: 8/14;
-	grid-row: 10;
-}
-.crossword-board__item-highlight--across-31 {
-	grid-column: 8/12;
-	grid-row: 11;
-}
-.crossword-board__item-highlight--across-32 {
-	grid-column: 1/9;
-	grid-row: 12;
-}
-.crossword-board__item-highlight--across-33 {
-	grid-column: 8/14;
+	grid-column: 10/19;
 	grid-row: 13;
 }
-.crossword-board__item-highlight--across-33 {
-	grid-column: 8/14;
-	grid-row: 13;
+.crossword-board__item-highlight--across-12 {
+	grid-column: 10/16;
+	grid-row: 16;
+}
+.crossword-board__item-highlight--across-13 {
+	grid-column: 1/8;
+	grid-row: 17;
 }
 
 
-#item1-1:valid ~ #item1-2:valid ~ #item1-3:valid ~ #item1-4:valid ~ #item1-5:valid ~ #item1-6:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-1 {
+#item2-4:valid ~ #item2-5:valid ~ #item2-6:valid ~ #item2-7:valid ~ #item12-8:valid ~ #item2-9:valid
+~ .crossword-board--highlight .crossword-board__item-highlight--across-2 {
 	opacity: 1;
 }
 
 #item2-6:valid ~ #item2-7:valid ~ #item2-8:valid ~ #item2-9:valid ~ #item2-10:valid ~ #item2-11:valid ~ #item2-12:valid ~ #item2-13:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-7 {
+~ .crossword-board--highlight .crossword-board__item-highlight--across-4 {
 	opacity: 1;
 }
 
 #item3-3:valid ~ #item3-4:valid ~ #item3-5:valid ~ #item3-6:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-8 {
+~ .crossword-board--highlight .crossword-board__item-highlight--across-6 {
 	opacity: 1;
 }
 
 #item4-1:valid ~ #item4-2:valid ~ #item4-3:valid ~ #item4-4:valid ~ #item4-5:valid ~ #item4-6:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-10 {
+~ .crossword-board--highlight .crossword-board__item-highlight--across-9 {
 	opacity: 1;
 }
 
 #item4-8:valid ~ #item4-9:valid ~ #item4-10:valid ~ #item4-11:valid ~ #item4-12:valid ~ #item4-13:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-11 {
+~ .crossword-board--highlight .crossword-board__item-highlight--across-10 {
 	opacity: 1;
 }
 
 #item5-3:valid ~ #item5-4:valid ~ #item5-5:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-14 {
+~ .crossword-board--highlight .crossword-board__item-highlight--across-12 {
 	opacity: 1;
 }
 
 #item5-9:valid ~ #item5-10:valid ~ #item5-11:valid ~ #item5-12:valid ~ #item5-13:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-16 {
+~ .crossword-board--highlight .crossword-board__item-highlight--across-13 {
 	opacity: 1;
 }
 
