--- a/style.scss
+++ b/style.scss
@@ -165,93 +165,33 @@ $color-focus-item: #FFFF74;
 	opacity: 1;
 }
 
-#item2-6:valid ~ #item2-7:valid ~ #item2-8:valid ~ #item2-9:valid ~ #item2-10:valid ~ #item2-11:valid ~ #item2-12:valid ~ #item2-13:valid
+#item4-7:valid ~ #item4-8:valid ~ #item4-9:valid ~ #item4-10:valid ~ #item4-11:valid ~ #item4-12:valid ~ #item4-13:valid ~ #item4-14:valid
 ~ .crossword-board--highlight .crossword-board__item-highlight--across-4 {
 	opacity: 1;
 }
 
-#item3-3:valid ~ #item3-4:valid ~ #item3-5:valid ~ #item3-6:valid
+#item6-1:valid ~ #item6-2:valid ~ #item6-3:valid ~ #item6-4:valid ~ #item6-5:valid ~ #item6-6:valid ~ #item6-7:valid ~ #item6-8:valid ~ #item6-9:valid
 ~ .crossword-board--highlight .crossword-board__item-highlight--across-6 {
 	opacity: 1;
 }
 
-#item4-1:valid ~ #item4-2:valid ~ #item4-3:valid ~ #item4-4:valid ~ #item4-5:valid ~ #item4-6:valid
+#item10-5:valid ~ #item10-6:valid ~ #item10-7:valid ~ #item10-8:valid ~ #item10-9:valid ~ #item10-10:valid ~ #item10-11:valid ~ #item10-12:valid ~ #item10-13:valid ~ #item10-14:valid ~ #item10-15:valid
 ~ .crossword-board--highlight .crossword-board__item-highlight--across-9 {
 	opacity: 1;
 }
 
-#item4-8:valid ~ #item4-9:valid ~ #item4-10:valid ~ #item4-11:valid ~ #item4-12:valid ~ #item4-13:valid
+#item13-10:valid ~ #item13-11:valid ~ #item13-12:valid ~ #item13-13:valid ~ #item13-14:valid ~ #item13-14:valid ~ #item13-15:valid ~ #item13-16:valid ~ #item13-17:valid ~ #item13-18:valid
 ~ .crossword-board--highlight .crossword-board__item-highlight--across-10 {
 	opacity: 1;
 }
 
-#item5-3:valid ~ #item5-4:valid ~ #item5-5:valid
+#item16-10:valid ~ #item16-11:valid ~ #item16-12:valid ~ #item16-13:valid ~ #item16-14:valid ~ #item16-15:valid
 ~ .crossword-board--highlight .crossword-board__item-highlight--across-12 {
 	opacity: 1;
 }
 
-#item5-9:valid ~ #item5-10:valid ~ #item5-11:valid ~ #item5-12:valid ~ #item5-13:valid
+#item17-1:valid ~ #item17-2:valid ~ #item17-3:valid ~ #item17-4:valid ~ #item17-5:valid ~ #item17-6:valid ~ #item17-7:valid
 ~ .crossword-board--highlight .crossword-board__item-highlight--across-13 {
-	opacity: 1;
-}
-
-#item6-1:valid ~ #item6-2:valid ~ #item6-3:valid ~ #item6-4:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-17 {
-	opacity: 1;
-}
-
-#item6-6:valid ~ #item6-7:valid ~ #item6-8:valid ~ #item6-9:valid ~ #item6-10:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-19 {
-	opacity: 1;
-}
-
-#item7-5:valid ~ #item7-6:valid ~ #item7-7:valid ~ #item7-8:valid ~ #item7-9:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-21 {
-	opacity: 1;
-}
-
-#item8-4:valid ~ #item8-5:valid ~ #item8-6:valid ~ #item8-7:valid ~ #item8-8:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-22 {
-	opacity: 1;
-}
-
-#item8-10:valid ~ #item8-11:valid ~ #item8-12:valid ~ #item8-13:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-23 {
-	opacity: 1;
-}
-
-#item9-1:valid ~ #item9-2:valid ~ #item9-3:valid ~ #item9-4:valid ~ #item9-5:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-26 {
-	opacity: 1;
-}
-
-#item9-9:valid ~ #item9-10:valid ~ #item9-11:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-28 {
-	opacity: 1;
-}
-
-#item10-1:valid ~ #item10-2:valid ~ #item10-3:valid ~ #item10-4:valid ~ #item10-5:valid ~ #item10-6:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-29 {
-	opacity: 1;
-}
-
-#item10-8:valid ~ #item10-9:valid ~ #item10-10:valid ~ #item10-11:valid ~ #item10-12:valid ~ #item10-13:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-30 {
-	opacity: 1;
-}
-
-#item11-8:valid ~ #item11-9:valid ~ #item11-10:valid ~ #item11-11:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-31 {
-	opacity: 1;
-}
-
-#item12-1:valid ~ #item12-2:valid ~ #item12-3:valid ~ #item12-4:valid ~ #item12-5:valid ~ #item12-6:valid ~ #item12-7:valid ~ #item12-8:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-32 {
-	opacity: 1;
-}
-
-#item13-8:valid ~ #item13-9:valid ~ #item13-10:valid ~ #item13-11:valid ~ #item13-12:valid ~ #item13-13:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--across-33 {
 	opacity: 1;
 }
 
@@ -265,97 +205,42 @@ $color-focus-item: #FFFF74;
 /***********************************************************/
 
 .crossword-board__item-highlight--down-1 {
-	grid-column: 1;
-	grid-row: 1/7;
-}
-.crossword-board__item-highlight--down-2 {
-	grid-column: 4;
-	grid-row: 1/7;
-}
-.crossword-board__item-highlight--down-3 {
-	grid-column: 6;
+	grid-column: 9;
 	grid-row: 1/5;
 }
+.crossword-board__item-highlight--down-3 {
+	grid-column: 1;
+	grid-row: 3/11;
+}
 .crossword-board__item-highlight--down-4 {
-	grid-column: 9;
-	grid-row: 1/8;
+	grid-column: 7;
+	grid-row: 4/15;
 }
 .crossword-board__item-highlight--down-5 {
-	grid-column: 11;
-	grid-row: 1/6;
+	grid-column: 3;
+	grid-row: 5/14;
 }
-.crossword-board__item-highlight--down-6 {
-	grid-column: 13;
-	grid-row: 1/6;
+.crossword-board__item-highlight--down-7 {
+	grid-column: 18;
+	grid-row: 6/15;
 }
 .crossword-board__item-highlight--down-8 {
-	grid-column: 3;
-	grid-row: 3/7;
+	grid-column: 10;
+	grid-row: 8/17;
 }
 .crossword-board__item-highlight--down-9 {
 	grid-column: 5;
-	grid-row: 3/6;
+	grid-row: 10/18;
 }
-.crossword-board__item-highlight--down-12 {
-	grid-column: 10;
-	grid-row: 4/7;
-}
-.crossword-board__item-highlight--down-13 {
-	grid-column: 12;
-	grid-row: 4/9;
-}
-.crossword-board__item-highlight--down-15 {
-	grid-column: 7;
-	grid-row: 5/10;
-}
-.crossword-board__item-highlight--down-18 {
+.crossword-board__item-highlight--down-11 {
 	grid-column: 2;
-	grid-row: 6/11;
+	grid-row: 14/8;
 }
-.crossword-board__item-highlight--down-19 {
+.crossword-board__item-highlight--down-14 {
 	grid-column: 6;
-	grid-row: 6/9;
+	grid-row: 17/19;
 }
-.crossword-board__item-highlight--down-20 {
-	grid-column: 8;
-	grid-row: 6/9;
-}
-.crossword-board__item-highlight--down-21 {
-	grid-column: 5;
-	grid-row: 7/14;
-}
-.crossword-board__item-highlight--down-22 {
-	grid-column: 4;
-	grid-row: 8/11;
-}
-.crossword-board__item-highlight--down-23 {
-	grid-column: 10;
-	grid-row: 8/14;
-}
-.crossword-board__item-highlight--down-24 {
-	grid-column: 11;
-	grid-row: 8/12;
-}
-.crossword-board__item-highlight--down-25 {
-	grid-column: 13;
-	grid-row: 8/14;
-}
-.crossword-board__item-highlight--down-26 {
-	grid-column: 1;
-	grid-row: 9/14;
-}
-.crossword-board__item-highlight--down-27 {
-	grid-column: 3;
-	grid-row: 9/14;
-}
-.crossword-board__item-highlight--down-28 {
-	grid-column: 9;
-	grid-row: 9/12;
-}
-.crossword-board__item-highlight--down-30 {
-	grid-column: 8;
-	grid-row: 10/14;
-}
+
 
 
 #item1-1:valid ~ #item2-1:valid ~ #item3-1:valid ~ #item4-1:valid ~ #item5-1:valid ~ #item6-1:valid
@@ -363,10 +248,6 @@ $color-focus-item: #FFFF74;
 	opacity: 1;
 }
 #item1-4:valid ~ #item2-4:valid ~ #item3-4:valid ~ #item4-4:valid ~ #item5-4:valid ~ #item6-4:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-2 {
-	opacity: 1;
-}
-#item1-6:valid ~ #item2-6:valid ~ #item3-6:valid ~ #item4-6:valid
 ~ .crossword-board--highlight .crossword-board__item-highlight--down-3 {
 	opacity: 1;
 }
@@ -379,7 +260,7 @@ $color-focus-item: #FFFF74;
 	opacity: 1;
 }
 #item1-13:valid ~ #item2-13:valid ~ #item3-13:valid ~ #item4-13:valid ~ #item5-13:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-6 {
+~ .crossword-board--highlight .crossword-board__item-highlight--down-7 {
 	opacity: 1;
 }
 #item3-3:valid ~ #item4-3:valid ~ #item5-3:valid ~ #item6-3:valid
@@ -391,65 +272,14 @@ $color-focus-item: #FFFF74;
 	opacity: 1;
 }
 #item4-10:valid ~ #item5-10:valid ~ #item6-10:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-12 {
+~ .crossword-board--highlight .crossword-board__item-highlight--down-11 {
 	opacity: 1;
 }
 #item4-12:valid ~ #item5-12:valid ~ #item6-12:valid ~ #item7-12:valid ~ #item8-12:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-13 {
+~ .crossword-board--highlight .crossword-board__item-highlight--down-14 {
 	opacity: 1;
 }
-#item5-7:valid ~ #item6-7:valid ~ #item7-7:valid ~ #item8-7:valid ~ #item9-7:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-15 {
-	opacity: 1;
-}
-#item6-2:valid ~ #item7-2:valid ~ #item8-2:valid ~ #item9-2:valid ~ #item10-2:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-18 {
-	opacity: 1;
-}
-#item6-6:valid ~ #item7-6:valid ~ #item8-6:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-19 {
-	opacity: 1;
-}
-#item6-8:valid ~ #item7-8:valid ~ #item8-8:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-20 {
-	opacity: 1;
-}
-#item7-5:valid ~ #item8-5:valid ~ #item9-5:valid ~ #item10-5:valid ~ #item11-5:valid ~ #item12-5:valid ~ #item13-5:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-21 {
-	opacity: 1;
-}
-#item8-4:valid ~ #item9-4:valid ~ #item10-4:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-22 {
-	opacity: 1;
-}
-#item8-10:valid ~ #item9-10:valid ~ #item10-10:valid ~ #item11-10:valid ~ #item12-10:valid ~ #item13-10:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-23 {
-	opacity: 1;
-}
-#item8-11:valid ~ #item9-11:valid ~ #item10-11:valid ~ #item11-11:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-24 {
-	opacity: 1;
-}
-#item8-13:valid ~ #item9-13:valid ~ #item10-13:valid ~ #item11-13:valid ~ #item12-13:valid ~ #item13-13:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-25 {
-	opacity: 1;
-}
-#item9-1:valid ~ #item10-1:valid ~ #item11-1:valid ~ #item12-1:valid ~ #item13-1:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-26 {
-	opacity: 1;
-}
-#item9-3:valid ~ #item10-3:valid ~ #item11-3:valid ~ #item12-3:valid ~ #item13-3:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-27 {
-	opacity: 1;
-}
-#item9-9:valid ~ #item10-9:valid ~ #item11-9:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-28 {
-	opacity: 1;
-}
-#item10-8:valid ~ #item11-8:valid ~ #item12-8:valid ~ #item13-8:valid
-~ .crossword-board--highlight .crossword-board__item-highlight--down-30 {
-	opacity: 1;
-}
+
 
 
 /***********************************************************/
