--- a/style.css
+++ b/style.css
@@ -183,32 +183,24 @@ $color-focus-item: #ffff74;
 }
 /*--Saved 7:44--*/
 
-#item10-5:valid
-	~ #item10-6:valid
-	~ #item10-7:valid
-	~ #item10-8:valid
-	~ #item10-9:valid
-	~ #item10-10:valid
-	~ #item10-11:valid
-	~ #item10-12:valid
-	~ #item10-13:valid
-	~ #item10-14:valid
-	~ #item10-15:valid
+#item12-8:valid
+	~ #item12-9:valid
+	~ #item12-10:valid
+	~ #item12-11:valid
+	~ #item12-12:valid
+	~ #item12-13:valid
+	~ #item12-14:valid
 	~ .crossword-board--highlight
 	.crossword-board__item-highlight--across-8 {
 	opacity: 1;
 }
 
-#item13-10:valid
-	~ #item13-11:valid
-	~ #item13-12:valid
-	~ #item13-13:valid
-	~ #item13-14:valid
-	~ #item13-14:valid
-	~ #item13-15:valid
-	~ #item13-16:valid
-	~ #item13-17:valid
-	~ #item13-18:valid
+#item14-8:valid
+	~ #item14-9:valid
+	~ #item14-10:valid
+	~ #item14-11:valid
+	~ #item14-12:valid
+	~ #item14-13:valid
 	~ .crossword-board--highlight
 	.crossword-board__item-highlight--across-10 {
 	opacity: 1;
@@ -224,42 +216,31 @@ $color-focus-item: #ffff74;
 /***********************************************************/
 
 .crossword-board__item-highlight--down-1 {
-	grid-column: 9;
-	grid-row: 1/5;
+	grid-column: 7;
+	grid-row: 1/9;
+}
+.crossword-board__item-highlight--down-2 {
+	grid-column: 12;
+	grid-row: 1/7;
 }
 .crossword-board__item-highlight--down-3 {
-	grid-column: 1;
-	grid-row: 3/11;
+	grid-column: 2;
+	grid-row: 2/9;
 }
 .crossword-board__item-highlight--down-4 {
-	grid-column: 7;
-	grid-row: 4/15;
+	grid-column: 5;
+	grid-row: 4/13;
 }
-.crossword-board__item-highlight--down-5 {
-	grid-column: 3;
-	grid-row: 5/14;
-}
-.crossword-board__item-highlight--down-7 {
-	grid-column: 18;
-	grid-row: 6/15;
-}
-.crossword-board__item-highlight--down-8 {
-	grid-column: 10;
-	grid-row: 8/17;
+.crossword-board__item-highlight--down-6 {
+	grid-column: 14;
+	grid-row: 6/13;
 }
 .crossword-board__item-highlight--down-9 {
-	grid-column: 5;
-	grid-row: 10/18;
-}
-.crossword-board__item-highlight--down-11 {
-	grid-column: 2;
-	grid-row: 14/19;
-}
-.crossword-board__item-highlight--down-14 {
-	grid-column: 6;
-	grid-row: 17/19;
+	grid-column: 11;
+	grid-row: 12/19;
 }
 
+/*--Saved 8:08--*/
 #item1-9:valid
 	~ #item2-9:valid
 	~ #item3-9:valid
