--- a/style.css
+++ b/style.css
@@ -791,41 +791,30 @@ $color-focus-item: #ffff74;
 
 /*saved 11:06*/
 
-#item2-4:valid
+#item2-2:valid
+	~ #item2-3:valid
+	~ #item2-4:valid
 	~ #item2-5:valid
 	~ #item2-6:valid
 	~ #item2-7:valid
-	~ #item12-8:valid
+	~ #item2-8:valid
 	~ #item2-9:valid
 	~ .crossword-clues
-	.crossword-clues__list-item--across-2 {
+	.crossword-clues__list-item--across-3 {
 	background: $color-valid-item;
 }
 
-#item4-7:valid
-	~ #item4-8:valid
-	~ #item4-9:valid
-	~ #item4-10:valid
-	~ #item4-11:valid
-	~ #item4-12:valid
-	~ #item4-13:valid
-	~ #item4-14:valid
-	~ .crossword-clues
-	.crossword-clues__list-item--across-4 {
-	background: $color-valid-item;
-}
-
-#item6-1:valid
-	~ #item6-2:valid
-	~ #item6-3:valid
-	~ #item6-4:valid
+#item6-4:valid
 	~ #item6-5:valid
 	~ #item6-6:valid
 	~ #item6-7:valid
 	~ #item6-8:valid
 	~ #item6-9:valid
+	~ #item6-10:valid
+	~ #item6-11:valid
+	~ #item6-12:valid
 	~ .crossword-clues
-	.crossword-clues__list-item--across-6 {
+	.crossword-clues__list-item--across-5 {
 	background: $color-valid-item;
 }
 
@@ -840,158 +829,110 @@ $color-focus-item: #ffff74;
 	~ #item10-13:valid
 	~ #item10-14:valid
 	~ #item10-15:valid
+	~ #item10-16:valid
 	~ .crossword-clues
-	.crossword-clues__list-item--across-9 {
+	.crossword-clues__list-item--across-7 {
 	background: $color-valid-item;
 }
 
-#item13-10:valid
-	~ #item13-11:valid
-	~ #item13-12:valid
-	~ #item13-13:valid
-	~ #item13-14:valid
-	~ #item13-14:valid
-	~ #item13-15:valid
-	~ #item13-16:valid
-	~ #item13-17:valid
-	~ #item13-18:valid
+#item12-8:valid
+	~ #item12-9:valid
+	~ #item12-10:valid
+	~ #item12-11:valid
+	~ #item12-12:valid
+	~ #item12-13:valid
+	~ #item12-14:valid
+	~ .crossword-clues
+	.crossword-clues__list-item--across-8 {
+	background: $color-valid-item;
+}
+
+#item14-8:valid
+	~ #item14-9:valid
+	~ #item14-10:valid
+	~ #item14-11:valid
+	~ #item14-12:valid
+	~ #item14-13:valid
 	~ .crossword-clues
 	.crossword-clues__list-item--across-10 {
 	background: $color-valid-item;
 }
 
-#item16-10:valid
-	~ #item16-11:valid
-	~ #item16-12:valid
-	~ #item16-13:valid
-	~ #item16-14:valid
-	~ #item16-15:valid
-	~ .crossword-clues
-	.crossword-clues__list-item--across-12 {
-	background: $color-valid-item;
-}
+/*DOWN*/
 
-#item17-1:valid
-	~ #item17-2:valid
-	~ #item17-3:valid
-	~ #item17-4:valid
-	~ #item17-5:valid
-	~ #item17-6:valid
-	~ #item17-7:valid
-	~ .crossword-clues
-	.crossword-clues__list-item--across-13 {
-	background: $color-valid-item;
-}
-
-#item1-9:valid
-	~ #item2-9:valid
-	~ #item3-9:valid
-	~ #item4-9:valid
+#item1-7:valid
+	~ #item2-7:valid
+	~ #item3-7:valid
+	~ #item4-7:valid
+	~ #item5-7:valid
+	~ #item6-7:valid
+	~ #item7-7:valid
+	~ #item8-7:valid
 	~ .crossword-clues
 	.crossword-clues__list-item--down-1 {
 	background: $color-valid-item;
 }
-
-#item3-1:valid
-	~ #item4-1:valid
-	~ #item5-1:valid
-	~ #item6-1:valid
-	~ #item7-1:valid
-	~ #item8-1:valid
-	~ #item9-1:valid
-	~ #item10-1:valid
+#item1-12:valid
+	~ #item2-12:valid
+	~ #item3-12:valid
+	~ #item4-12:valid
+	~ #item5-12:valid
+	~ #item6-12:valid
+	~ .crossword-clues
+	.crossword-clues__list-item--down-2 {
+	background: $color-valid-item;
+}
+#item2-2:valid
+	~ #item3-2:valid
+	~ #item4-2:valid
+	~ #item5-2:valid
+	~ #item6-2:valid
+	~ #item7-2:valid
+	~ #item8-2:valid
 	~ .crossword-clues
 	.crossword-clues__list-item--down-3 {
 	background: $color-valid-item;
 }
 
-#item4-7:valid
-	~ #item5-7:valid
-	~ #item6-7:valid
-	~ #item7-7:valid
-	~ #item8-7:valid
-	~ #item9-7:valid
-	~ #item10-7:valid
-	~ #item11-7:valid
-	~ #item12-7:valid
-	~ #item13-7:valid
-	~ #item14-7:valid
+#item4-5:valid
+	~ #item5-5:valid
+	~ #item6-5:valid
+	~ #item7-5:valid
+	~ #item8-5:valid
+	~ #item9-5:valid
+	~ #item10-5:valid
+	~ #item11-5:valid
+	~ #item12-5:valid
 	~ .crossword-clues
 	.crossword-clues__list-item--down-4 {
 	background: $color-valid-item;
 }
 
-#item5-3:valid
-	~ #item6-3:valid
-	~ #item7-3:valid
-	~ #item8-3:valid
-	~ #item9-3:valid
-	~ #item10-3:valid
-	~ #item11-3:valid
-	~ #item12-3:valid
-	~ #item13-3:valid
+#item6-14:valid
+	~ #item7-14:valid
+	~ #item8-14:valid
+	~ #item9-14:valid
+	~ #item10-14:valid
+	~ #item11-14:valid
+	~ #item12-14:valid
 	~ .crossword-clues
-	.crossword-clues__list-item--down-5 {
+	.crossword-clues__list-item--down-6 {
 	background: $color-valid-item;
 }
 
-#item6-18:valid
-	~ #item7-18:valid
-	~ #item8-18:valid
-	~ #item9-18:valid
-	~ #item10-18:valid
-	~ #item11-18:valid
-	~ #item12-18:valid
-	~ #item13-18:valid
-	~ #item14-18:valid
-	~ .crossword-clues
-	.crossword-clues__list-item--down-7 {
-	background: $color-valid-item;
-}
-
-#item8-10:valid
-	~ #item9-10:valid
-	~ #item10-10:valid
-	~ #item11-10:valid
-	~ #item12-10:valid
-	~ #item13-10:valid
-	~ #item14-10:valid
-	~ #item15-10:valid
-	~ #item16-10:valid
-	~ .crossword-clues
-	.crossword-clues__list-item--down-8 {
-	background: $color-valid-item;
-}
-
-#item10-5:valid
-	~ #item11-5:valid
-	~ #item12-5:valid
-	~ #item13-5:valid
-	~ #item14-5:valid
-	~ #item15-5:valid
-	~ #item16-5:valid
-	~ #item17-5:valid
+#item12-11:valid
+	~ #item13-11:valid
+	~ #item14-11:valid
+	~ #item15-11:valid
+	~ #item16-11:valid
+	~ #item17-11:valid
+	~ #item18-11:valid
 	~ .crossword-clues
 	.crossword-clues__list-item--down-9 {
 	background: $color-valid-item;
 }
 
-#item14-2:valid
-	~ #item15-2:valid
-	~ #item16-2:valid
-	~ #item17-2:valid
-	~ #item18-2:valid
-	~ .crossword-clues
-	.crossword-clues__list-item--down-11 {
-	background: $color-valid-item;
-}
 
-#item17-6:valid
-	~ #item18-6:valid
-	~ .crossword-clues
-	.crossword-clues__list-item--down-14 {
-	background: $color-valid-item;
-}
 .crossword-complete {
 	position: absolute;
 	z-index: 1000;
@@ -1005,29 +946,23 @@ $color-focus-item: #ffff74;
 	opacity: 0;
 	transition: opacity 0.3s ease-in-out;
 }
-#item2-4:valid
+#item2-2:valid
+	~ #item2-3:valid
+	~ #item2-4:valid
 	~ #item2-5:valid
 	~ #item2-6:valid
 	~ #item2-7:valid
-	~ #item12-8:valid
+	~ #item2-8:valid
 	~ #item2-9:valid
-	~ #item4-7:valid
-	~ #item4-8:valid
-	~ #item4-9:valid
-	~ #item4-10:valid
-	~ #item4-11:valid
-	~ #item4-12:valid
-	~ #item4-13:valid
-	~ #item4-14:valid
-	~ #item6-1:valid
-	~ #item6-2:valid
-	~ #item6-3:valid
 	~ #item6-4:valid
 	~ #item6-5:valid
 	~ #item6-6:valid
 	~ #item6-7:valid
 	~ #item6-8:valid
 	~ #item6-9:valid
+	~ #item6-10:valid
+	~ #item6-11:valid
+	~ #item6-12:valid		
 	~ #item10-5:valid
 	~ #item10-6:valid
 	~ #item10-7:valid
@@ -1039,94 +974,64 @@ $color-focus-item: #ffff74;
 	~ #item10-13:valid
 	~ #item10-14:valid
 	~ #item10-15:valid
-	~ #item13-10:valid
-	~ #item13-11:valid
-	~ #item13-12:valid
-	~ #item13-13:valid
-	~ #item13-14:valid
-	~ #item13-14:valid
-	~ #item13-15:valid
-	~ #item13-16:valid
-	~ #item13-17:valid
-	~ #item13-18:valid
-	~ #item16-10:valid
-	~ #item16-11:valid
-	~ #item16-12:valid
-	~ #item16-13:valid
-	~ #item16-14:valid
-	~ #item16-15:valid
-	~ #item17-1:valid
-	~ #item17-2:valid
-	~ #item17-3:valid
-	~ #item17-4:valid
-	~ #item17-5:valid
-	~ #item17-6:valid
-	~ #item17-7:valid
-	~ #item1-9:valid
-	~ #item2-9:valid
-	~ #item3-9:valid
-	~ #item4-9:valid
-	~ #item3-1:valid
-	~ #item4-1:valid
-	~ #item5-1:valid
-	~ #item6-1:valid
-	~ #item7-1:valid
-	~ #item8-1:valid
-	~ #item9-1:valid
-	~ #item10-1:valid
+	~ #item10-16:valid
+	~ #item12-8:valid
+	~ #item12-9:valid
+	~ #item12-10:valid
+	~ #item12-11:valid
+	~ #item12-12:valid
+	~ #item12-13:valid
+	~ #item12-14:valid
+	~ #item14-8:valid
+	~ #item14-9:valid
+	~ #item14-10:valid
+	~ #item14-11:valid
+	~ #item14-12:valid
+	~ #item14-13:valid
+	~ #item1-7:valid
+	~ #item2-7:valid
+	~ #item3-7:valid
 	~ #item4-7:valid
 	~ #item5-7:valid
 	~ #item6-7:valid
 	~ #item7-7:valid
 	~ #item8-7:valid
-	~ #item9-7:valid
-	~ #item10-7:valid
-	~ #item11-7:valid
-	~ #item12-7:valid
-	~ #item13-7:valid
-	~ #item14-7:valid
-	~ #item5-3:valid
-	~ #item6-3:valid
-	~ #item7-3:valid
-	~ #item8-3:valid
-	~ #item9-3:valid
-	~ #item10-3:valid
-	~ #item11-3:valid
-	~ #item12-3:valid
-	~ #item13-3:valid
-	~ #item6-18:valid
-	~ #item7-18:valid
-	~ #item8-18:valid
-	~ #item9-18:valid
-	~ #item10-18:valid
-	~ #item11-18:valid
-	~ #item12-18:valid
-	~ #item13-18:valid
-	~ #item14-18:valid
-	~ #item8-10:valid
-	~ #item9-10:valid
-	~ #item10-10:valid
-	~ #item11-10:valid
-	~ #item12-10:valid
-	~ #item13-10:valid
-	~ #item14-10:valid
-	~ #item15-10:valid
-	~ #item16-10:valid
+	~ #item1-12:valid
+	~ #item2-12:valid
+	~ #item3-12:valid
+	~ #item4-12:valid
+	~ #item5-12:valid
+	~ #item6-12:valid
+	~ #item2-2:valid
+	~ #item3-2:valid
+	~ #item4-2:valid
+	~ #item5-2:valid
+	~ #item6-2:valid
+	~ #item7-2:valid
+	~ #item8-2:valid
+	~ #item4-5:valid
+	~ #item5-5:valid
+	~ #item6-5:valid
+	~ #item7-5:valid
+	~ #item8-5:valid
+	~ #item9-5:valid
 	~ #item10-5:valid
 	~ #item11-5:valid
 	~ #item12-5:valid
-	~ #item13-5:valid
-	~ #item14-5:valid
-	~ #item15-5:valid
-	~ #item16-5:valid
-	~ #item17-5:valid
-	~ #item14-2:valid
-	~ #item15-2:valid
-	~ #item16-2:valid
-	~ #item17-2:valid
-	~ #item18-2:valid
-	~ #item17-6:valid
-	~ #item18-6:valid
+	~ #item6-14:valid
+	~ #item7-14:valid
+	~ #item8-14:valid
+	~ #item9-14:valid
+	~ #item10-14:valid
+	~ #item11-14:valid
+	~ #item12-14:valid
+	~ #item12-11:valid
+	~ #item13-11:valid
+	~ #item14-11:valid
+	~ #item15-11:valid
+	~ #item16-11:valid
+	~ #item17-11:valid
+	~ #item18-11:valid
 	~ .crossword-complete {
 	opacity: 1;
 }
